curriculos do edir e kaique feitoss

--- a/edir.html
+++ b/edir.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Currículo - Edir Couto</title>
     <link rel="stylesheet" href="/assets/css/curriculos.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
   </head>
   <body>
     <div class="container">
+      <div class="img-perfil">
+        <img src="/assets/images/foto_edir.jpg" alt="" />
+      </div>
       <div class="title-info">
         <h1>Edir Araújo do Couto</h1>
         <div class="infos">
@@ -24,11 +21,11 @@
               width="20"
               height="20"
               fill="currentColor"
-              class="bi bi-house"
+              class="bi bi-house-door-fill"
               viewBox="0 0 16 16"
             >
               <path
-                d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"
+                d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z"
               />
             </svg>
           </div>
@@ -49,7 +46,7 @@
             </svg>
           </div>
           <div class="info">
-            <span>edircouto@gmail.com </span>
+            <a href=""><span>edircouto@gmail.com </span></a>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -64,7 +61,7 @@
             </svg>
           </div>
           <div class="info">
-            <span>www.linkedin.com/in/edir-couto</span>
+            <a href=""><span>www.linkedin.com/in/edir-couto</span></a>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -108,25 +105,56 @@
       </div>
       <div class="skill">
         <h1>Habilidades Técnicas</h1>
-        <ul>
+        <div class="skill-info">
+          <ul>
             <li>HTML/CSS</li>
             <li>Javascript</li>
             <li>Excel Avançado</li>
             <li>Visual Studio Code</li>
+          </ul>
+          <ul>
             <li>Pacote Office</li>
             <li>Github</li>
             <li>Mysql</li>
             <li>Java</li>
             <li>Cloud</li>
+          </ul>
+        </div>
+      </div>
+      <div class="formation">
+        <h1>Formação</h1>
+        <div class="formation-itens">
+          <h4>Análise e Desenvolvimento de Sistemas</h4>
+          <span
+            >Instituição Baiana de Ensino Superior Dom Pedro II - 08/2020 até
+            06/2023</span
+          >
+        </div>
+      </div>
+      <div class="certification">
+        <h1>Cursos e Certificações</h1>
+        <div class="certification-itens">
+          <li>Fundamentos de AWS, Escola da Nuvem - 2023</li>
+          <li>Curso de Suporte de TI, Google/Coursera - 2022</li>
+          <li>Curso de Pacote Office 365, Escola do trabalhador 40 -2022</li>
+          <li>Curso de Excel Avançado, Senac - 2017</li>
+          <li>
+            Curso de Montagem e Manutenção de Computadores, Microlins - 2015
+          </li>
+          <li>CNH AD - 2012</li>
+        </div>
+      </div>
+      <div class="activity">
+        <h1>Atividades</h1>
+        <ul>
+          <li>Embaixador na Ada Tech</li>
+          <li>Programação</li>
+          <li>Assistir Série</li>
+          <li>Academia</li>
+          <li>Estudar</li>
         </ul>
       </div>
-      <div class=""></div>
     </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
+    <a class="button-return" href="/index.html"><button>Voltar</button></a>
   </body>
 </html>
