--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <p class="title">Alan Severo<br><span>Analista de TI</span></p>
           <ul class="sci">
             <li>
-              <a href="#" alt="Currículo">
+              <a href="/alan.html" alt="Currículo">
                 CV
               </a>
             </li>
@@ -35,7 +35,7 @@
           <p class="title">Edir Couto<br><span>Desenvolvedor Front-end</span></p>
           <ul class="sci">
             <li>
-              <a href="#" alt="Currículo">
+              <a href="/edir.html" alt="Currículo">
                 CV
               </a>
             </li>
@@ -54,7 +54,7 @@
           <p class="title">Guilherme Canário<br><span>Analista de TI</span></p>
           <ul class="sci">
             <li>
-              <a href="#" alt="Currículo">
+              <a href="/guilherme.html" alt="Currículo">
                 CV
               </a>
             </li>
@@ -92,7 +92,7 @@
           <p class="title">Vinicius Lopes<br><span>Desenvolvedor Back-end</span></p>
           <ul class="sci">
             <li>
-              <a href="#" alt="Currículo">
+              <a href="/vinicius.html" alt="Currículo">
                 CV
               </a>
             </li>
