--- a/vinicius.html
+++ b/vinicius.html
@@ -61,7 +61,7 @@
             </svg>
           </div>
           <div class="info">
-            <span>https://www.linkedin.com/in/kaique-masqueto-a71bb8b9/</span>
+            <a href=""><span>https://www.linkedin.com/in/kaique-masqueto-a71bb8b9/</span></a>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
