--- a/guilherme.html
+++ b/guilherme.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Currículo - Kaique Masqueto</title>
+    <title>Currículo - Guilherme Canário</title>
     <link rel="stylesheet" href="/assets/css/curriculos.css" />
   </head>
   <body>
     <div class="container">
       <div class="img-perfil">
-        <img src="/assets/images/foto_kaique.jpg" alt="" />
+        <img src="/assets/images/foto_guilherme.jpg" alt="" />
       </div>
       <div class="title-info">
-        <h1>Kaique Masqueto</h1>
+        <h1>Guilherme Canário Carlos</h1>
         <div class="infos">
           <div class="info">
-            <span>Vila Pirituba, São Paulo, SP</span>
+            <span>Itamarati, Petrópolis - RJ</span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -30,7 +30,7 @@
             </svg>
           </div>
           <div class="info">
-            <span>(11)94951-1449 </span>
+            <span>(24) 98819-2665</span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -46,7 +46,7 @@
             </svg>
           </div>
           <div class="info">
-            <span><a href="">kaiquemasqueto@gmail.com</a></span>
+            <span><a href="">guilherme.canario@outlook.com</a></span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -61,7 +61,7 @@
             </svg>
           </div>
           <div class="info">
-            <a href=""><span>https://www.linkedin.com/in/kaique-masqueto-a71bb8b9/</span></a>
+            <a href=""><span>www.linkedin.com/in/guilherme-canário</span></a>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -79,58 +79,55 @@
       </div>
       <div class="resume">
         <p>
-          Profissional com 6 anos de experiência na área da Engenharia
-          Clínica/Área da Saúde, mas que sempre teve uma paixão pela área de
-          tecnologia, busco hoje uma migração de carreirapara a área de
-          Desenvolvimento WEB. Com a minha experiência na área da eletrônica,
-          irei carregar uma bagagem muito boa para a área de desenvolvimento,
-          pois resolver problemas é o que sempre gostei de fazer, antes na
-          eletrônica agora nos códigos. Sou uma pessoa super responsável e com
-          sede de aprendizado. Busco sempre fazer meu trabalho com amor e
-          excelência.
+          Técnico em informática com vasta experiência em resolução de problemas de hardware e software.
+          Finalizando Sistemas de Informação pela Estácio e cursando Fundamentos em AWS pela Escola da
+          Nuvem. Em transição de carreira onde procuro aprender tecnologias em Cloud. Busco oportunidade
+          em trabalhar com Cloud Computing, possuo objetivo de gerenciar equipes de TI e aprimorar meus
+          conhecimentos.          
         </p>
       </div>
       <div class="experience">
         <h1>Experiência Profissional</h1>
         <div class="experience-work">
-          <h4>Consultor Técnico II</h4>
-          <span>Fresenius
-            | Dez/2021 – Presente</span>
+          <h4>Técnico de Informática</h4>
+          <span>Hospital Alcides Carneiro - 07/2018 - atualmente</span>
           <ul>
-            <li>Visitas aos clientes, como
-              Hospitais e Clínicas em campo para a realizaçãode Manutenções Corretivas, Preventivas, Treinamentos e Workshops de toda linha de equipamentos de Hemodiálise, da linha Fresenius.</li>
+            <li>Responsável pelo atendimento e suporte aos colaboradores do Hospital e Upas da cidade.</li>
             <li>
-              Realização das atividades
-atendendo as normas técnicas, contribuindopara o cumprimento dos prazos estabelecidos junto a instituição.
+              Suporte e monitoramento dos servidores Windows Server 2008 R2 e Windows Server 2012
+              (incluído AD, GPO, DNS e WSUS).
             </li>
-            <li>Realização de rotinas
-              administrativas, como relatórios de manutenções,controle de estoque de peças e ferramentas, folha de ponto e reembolsodo cartão corporativo.</li>
+            <li>Suporte e monitoramento do Firewall Endian e do Eset Endpoint.</li>
+            <li>Instalação, configuração e suporte dos sistemas Alterdata e Bimer.</li>
+            <li>Suporte e gerenciamento da ferramenta Google Workspace (incluído backup em nuvem).</li>
+            <li>Suporte aos storages QNAP.</li>
+            <li>Instalação e configuração dos sistemas Arya e X-Clinic (sistemas hospitalares).</li>
+            <li>Monitoramento de câmeras de segurança e saúde dos demais equipamentos.</li>
           </ul>
         </div>
         <div class="experience-work">
-          <h4>Técnico em Engenharia Clínica</h4>
-          <span>Hospital Sírio Libanês
-            | Out/2017 – Dez/2021</span>
+          <h4>Assistente Fiscal</h4>
+          <span>Aprazível Sabor Ltda - 06/2015 até 04/2017</span>
           <ul>
-            <li>Realização das atividades
-              atendendo as normas técnicas, contribuindopara o cumprimento dos prazos estabelecidos junto a instituição.</li>
             <li>
-              Realização de atendimentos de chamados
+              Responsável por revisar documentos fiscais de compra de mercadorias e serviços contratados,
+              verificando a idoneidade do documento, identificando eventuais impostos a serem retidos.
             </li>
-            <li>Gestão do parque tecnológico do hospital, controlando as manutençõescorretivas e preventivas</li>
-            <li>Realização das manutenções corretivas e preventivas dos equipamentoda unidade, afim de manter o bom funcionamento do equipamento.</li>
-          </ul>
-        </div>
-        <div class="experience-work">
-          <h4>Técnico em Engenharia Clínica</h4>
-          <span>Hospital Beneficiência Portuguesa de São Paulo (BP)
-            | Maio/2017 – Out/2017</span>
-          <ul>
-            <li>Realização de atendimentos de chamados</li>
             <li>
-              Gestão do parque tecnológico do hospital, controlando as manutençõescorretivas e preventivas
+              Emissão de notas fiscais referentes à venda, movimentação de materiais e equipamentos.
             </li>
-            <li>Realização das manutenções corretivas e preventivas dos equipamentoda unidade, afim de manter o bom funcionamento do equipamento.</li>
+            <li>
+              Lançamentos de notas fiscais e contábeis, retenção de impostos, MFD, TDM, revisão de
+              documentos fiscais de compra de mercadorias e serviços contratados, verificação da idoneidade
+              dos documentos, identificando eventuais impostos a serem retidos, controle e arquivamento de
+              documentos fiscais, tais como: notas fiscais de saída, notas fiscais de serviço, emissão de notas
+              fiscais referentes à movimentação de materiais e equipamentos da empresa, auxílio na apuração
+              de impostos, escrituração de notas fiscais de serviço no sistema utilizado pela empresa, validação
+              de notas fiscais eletrônicas recebidas (DANFEs) no site da secretaria da fazenda para verificação da
+              sua autenticidade, controle e validação dos arquivos XML relativos às Notas Fiscais eletrônicas
+              recebidas para atendimento da Legislação, geração de relatórios, lançamentos de dados no sistema
+              de notas fiscais, atuação com a classificação, auxilio na apuração dos impostos.
+            </li>
           </ul>
         </div>
       </div>
@@ -138,58 +135,56 @@ atendendo as normas técnicas, contribuindopara o cumprimento dos prazos estabel
         <h1>Habilidades Técnicas</h1>
         <div class="skill-info">
           <ul>
-            <li>Lógica de Programação</li>
-            <li>HTML/CSS</li>
-            <li>Javascript</li>
-            <li>Mysql</li>
+            <li>Office</li>
+            <li>Windows</li>
+            <li>Linux</li>
+            <li>Zabbix</li>
+            <li>Endian</li>
+            <li>PFSense</li>
+            <li>Arya</li>
+            <li>PACS</li>
+            <li>Redes</li>
           </ul>
           <ul>
-            <li>NodeJS</li>
-            <li>Express</li>
-            <li>ORM Sequelize</li>
-            <li>Git/Github</li>
-            <li>React</li>
-            <li>React Native</li>
+            <li>RIS</li>
+            <li>X-Clinic</li>
+            <li>PowerBI </li>
+            <li>CFTV</li>
+            <li>AWS</li>
+            <li>Cloud</li>
+            <li>Windows Server</li>
+            <li>QNAP</li>
           </ul>
         </div>
       </div>
       <div class="formation">
         <h1>Formação</h1>
         <div class="formation-itens">
-          <h4>Análise e Desenvolvimento de Sistemas</h4>
-          <span
-            >Uninove | Jan/2022 - Dez/2024</span
-          >
+          <h4>Sistemas de Informação</h4>
+          <span>Estácio de Sá - 06/2022 até 06/2024</span>
         </div>
-        <div class="formation-itens">
-          <h4>Técnico em Equipamentos Biomédicos</h4>
-          <span
-            >SENAI Mariano Ferraz
-            | Jun/2015 - Jun/2017</span
-          >
-        </div>
-        <div class="formation-itens">
-          <h4>CAI - Eletricista de Manutenção</h4>
-          <span
-            >SENAI Mariano Ferraz
-            | Jan/2012 - Dez/2013</span
-          >
-        </div>
+
       </div>
       <div class="certification">
         <h1>Cursos e Certificações</h1>
         <div class="certification-itens">
-          <li>Fundamentos de AWS, Escola da Nuvem | 2023</li>
-          <li>Desenvolvimento Web Full Stack | 2023</li>
+          <li>Gestão de Conflitos e Negociação - 2021</li>
+          <li>Acelerador de Carreira com PowerBI - 2023</li>
+          <li>Plano de Gerenciamento de Resíduos de Serviço de Saúde - 2023</li>
+          <li>Fundamentos em AWS - 2023</li>
         </div>
       </div>
       <div class="activity">
         <h1>Atividades</h1>
         <ul>
           <li>Estudar</li>
-          <li>Programação</li>
-          <li>Família</li>
-          <li>Jogos</li>
+          <li>Conservação ambiental </li>
+          <li>Atividades ao ar livre</li>
+          <li>Viagem</li>
+          <li>Jogar</li>
+          <li>Futebol</li>
+          <li>Voluntariado</li>
+          <li>Séries</li>
         </ul>
       </div>
     </div>
