--- a/vinicius.html
+++ b/vinicius.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Currículo - Kaique Masqueto</title>
+    <title>Currículo - Vinicius Lopes</title>
     <link rel="stylesheet" href="/assets/css/curriculos.css" />
   </head>
   <body>
     <div class="container">
       <div class="img-perfil">
-        <img src="/assets/images/foto_kaique.jpg" alt="" />
+        <img src="/assets/images/foto_vincius.jpg" alt="" />
       </div>
       <div class="title-info">
-        <h1>Kaique Masqueto</h1>
+        <h1>Vinicius Lopes</h1>
         <div class="infos">
           <div class="info">
-            <span>Vila Pirituba, São Paulo, SP</span>
+            <span>Ermelino Matarazzo, São Paulo, SP</span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -30,7 +30,7 @@
             </svg>
           </div>
           <div class="info">
-            <span>(11)94951-1449 </span>
+            <span>(11) 95223-8295 </span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -46,7 +46,7 @@
             </svg>
           </div>
           <div class="info">
-            <span><a href="">kaiquemasqueto@gmail.com</a></span>
+            <span><a href="">vini.romao159@gmail.com</a></span>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -61,7 +61,7 @@
             </svg>
           </div>
           <div class="info">
-            <a href=""><span>https://www.linkedin.com/in/kaique-masqueto-a71bb8b9/</span></a>
+            <a href=""><span>https://www.linkedin.com/in/viniciuslromao/</span></a>
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
@@ -79,58 +79,31 @@
       </div>
       <div class="resume">
         <p>
-          Profissional com 6 anos de experiência na área da Engenharia
-          Clínica/Área da Saúde, mas que sempre teve uma paixão pela área de
-          tecnologia, busco hoje uma migração de carreirapara a área de
-          Desenvolvimento WEB. Com a minha experiência na área da eletrônica,
-          irei carregar uma bagagem muito boa para a área de desenvolvimento,
-          pois resolver problemas é o que sempre gostei de fazer, antes na
-          eletrônica agora nos códigos. Sou uma pessoa super responsável e com
-          sede de aprendizado. Busco sempre fazer meu trabalho com amor e
-          excelência.
+          Com foco no meu desenvolvimento profissional e no crescimento da organização , busco uma
+          oportunidade para desenvolver minhas habilidades nas áreas relacionadas a Cloud computing e/ou
+          desenvolvimento com Python. Sou dedicado e comprometido em contribuir para o sucesso da
+          empresa, valorizando o aprendizado contínuo com uma abordagem proativa e disposto a enfrentar
+          novos desafios.
         </p>
       </div>
       <div class="experience">
         <h1>Experiência Profissional</h1>
         <div class="experience-work">
-          <h4>Consultor Técnico II</h4>
-          <span>Fresenius
-            | Dez/2021 – Presente</span>
+          <h4>Operador de site</h4>
+          <span>Tecnoset | Set/2019 – Presente</span>
           <ul>
-            <li>Visitas aos clientes, como
-              Hospitais e Clínicas em campo para a realizaçãode Manutenções Corretivas, Preventivas, Treinamentos e Workshops de toda linha de equipamentos de Hemodiálise, da linha Fresenius.</li>
-            <li>
-              Realização das atividades
-atendendo as normas técnicas, contribuindopara o cumprimento dos prazos estabelecidos junto a instituição.
-            </li>
-            <li>Realização de rotinas
-              administrativas, como relatórios de manutenções,controle de estoque de peças e ferramentas, folha de ponto e reembolsodo cartão corporativo.</li>
+            <li>Monitoramento de impressoras;</li>
+            <li>Suporte ao usuário;</li>
+            <li>Acompanhamento de chamados técnicos;</li>
           </ul>
         </div>
         <div class="experience-work">
-          <h4>Técnico em Engenharia Clínica</h4>
-          <span>Hospital Sírio Libanês
-            | Out/2017 – Dez/2021</span>
+          <h4>Técnico em informática (Estágio)</h4>
+          <span>Ecobraz | Out/2018 - Mar/2019</span>
           <ul>
-            <li>Realização das atividades
-              atendendo as normas técnicas, contribuindopara o cumprimento dos prazos estabelecidos junto a instituição.</li>
-            <li>
-              Realização de atendimentos de chamados
-            </li>
-            <li>Gestão do parque tecnológico do hospital, controlando as manutençõescorretivas e preventivas</li>
-            <li>Realização das manutenções corretivas e preventivas dos equipamentoda unidade, afim de manter o bom funcionamento do equipamento.</li>
-          </ul>
-        </div>
-        <div class="experience-work">
-          <h4>Técnico em Engenharia Clínica</h4>
-          <span>Hospital Beneficiência Portuguesa de São Paulo (BP)
-            | Maio/2017 – Out/2017</span>
-          <ul>
-            <li>Realização de atendimentos de chamados</li>
-            <li>
-              Gestão do parque tecnológico do hospital, controlando as manutençõescorretivas e preventivas
-            </li>
-            <li>Realização das manutenções corretivas e preventivas dos equipamentoda unidade, afim de manter o bom funcionamento do equipamento.</li>
+            <li>Montagens e manutenções de computadores;</li>
+            <li>Formatações e correções de sistemas operacionais;</li>
+            <li>Suporte e apoio ao cliente;</li>
           </ul>
         </div>
       </div>
@@ -138,18 +111,19 @@ atendendo as normas técnicas, contribuindopara o cumprimento dos prazos estabel
         <h1>Habilidades Técnicas</h1>
         <div class="skill-info">
           <ul>
-            <li>Lógica de Programação</li>
-            <li>HTML/CSS</li>
-            <li>Javascript</li>
-            <li>Mysql</li>
+            <li>AWS</li>
+            <li>Cloud</li>
+            <li>Python</li>
+            <li>MySQL</li>
+            <li>Git/GitHub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Informática</li>
           </ul>
           <ul>
-            <li>NodeJS</li>
-            <li>Express</li>
-            <li>ORM Sequelize</li>
-            <li>Git/Github</li>
-            <li>React</li>
-            <li>React Native</li>
+            <li>Suporte ao usuário</li>
+            <li>Windows</li>
+            <li>Linux</li>
           </ul>
         </div>
       </div>
@@ -157,30 +131,20 @@ atendendo as normas técnicas, contribuindopara o cumprimento dos prazos estabel
         <h1>Formação</h1>
         <div class="formation-itens">
           <h4>Análise e Desenvolvimento de Sistemas</h4>
-          <span
-            >Uninove | Jan/2022 - Dez/2024</span
-          >
+          <span>Faculdade Interativa de São Paulo | Fev/2020 - Jun/2022</span>
         </div>
         <div class="formation-itens">
-          <h4>Técnico em Equipamentos Biomédicos</h4>
-          <span
-            >SENAI Mariano Ferraz
-            | Jun/2015 - Jun/2017</span
-          >
-        </div>
-        <div class="formation-itens">
-          <h4>CAI - Eletricista de Manutenção</h4>
-          <span
-            >SENAI Mariano Ferraz
-            | Jan/2012 - Dez/2013</span
-          >
+          <h4>Técnico em Informática</h4>
+          <span>ETEC Aprígio Gonzaga | Jun/2017 - Dez/2018</span>
         </div>
       </div>
       <div class="certification">
         <h1>Cursos e Certificações</h1>
         <div class="certification-itens">
+          <li>Inglês, CNA | Cursando (Ano 1)</li>
           <li>Fundamentos de AWS, Escola da Nuvem | 2023</li>
-          <li>Desenvolvimento Web Full Stack | 2023</li>
+          <li>Scrum Fundamentals Certified, Scrum Study | 2021</li>
+          <li>Bootcamp desenvolvedor Python, IGTI | 2021</li>
         </div>
       </div>
       <div class="activity">
@@ -188,8 +152,9 @@ atendendo as normas técnicas, contribuindopara o cumprimento dos prazos estabel
         <ul>
           <li>Estudar</li>
           <li>Programação</li>
-          <li>Família</li>
-          <li>Jogos</li>
+          <li>Futebol</li>
+          <li>Jogos de tabuleiros</li>
+          <li>Viajar</li>
         </ul>
       </div>
     </div>
